# Compilerbau

./: ASSIGNMENTS  README.md
0-installation/: AbsCPP.hi  LexCPP.hi  LexCPP.x  ParCPP.hi  ParCPP.info  ParCPP.y  PrintCPP.hi  SkelCPP.hi  TestCPP  TestCPP.hi
0-installation/llvm_cpp/: Makefile  toy
0-installation/llvm_hs/: Codegen.hs  Emit.hs  JIT.hs  Makefile  llvm-test.cabal  stack.yaml
0-installation/llvm_hs/.stack-work/: stack.sqlite3
1-grammar/testInputs/: 4-grade.cc
P1/: .gitignore  CPP.cf  run_tests.sh
P1/testInputs/: mwe.cc
P2/: Absyn.C  Absyn.H  Bison.H  CPP.l  CPP.y  LexCPP.x  Makefile  ParCPP.y  Parser.H  Printer.C  Printer.H  Skel.C  Skel.H  TypeChecker.C  TypeChecker.H  TypeUtils.c  TypeUtils.h  compiler  lex.cpp_.c  main.cpp  run_tests.sh  y.tab.c
P2/testInputs/: LValue.cpp  Test1.cpp  Test10.cpp  Test11.cpp  Test13.cpp  Test14.cpp  Test15.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  Test6.cpp  Test7.cpp  Test8.cpp  Test9.cpp  Test_Do-While_Negative.cpp  Test_Do-While_Positive.cpp  Test_Inheritance_Base_Already_Defined_Negative.cpp  Test_Inheritance_Negative.cpp  Test_Inheritance_Negative_UndefinedBase.cpp  Test_Inheritance_Positive.cpp  Test_Inheritance_Positive_Exception.cpp  Testcases Explanation.txt  UnaryOp.cpp
P3/: Bison.H  CPP2.cf  CPP2.l  CPP2.y  Generator.C  Generator.H  Parser.H  Printer.C  Printer.H  compiler  debug.sh  div.cpp2  lex.cpp_.c  main.cpp  release.sh  run_tests.sh  y.tab.c
P3/testInputs/: do_while.cpp2  example.cpp2  for_loop.cpp  for_loop.cpp2  function.cpp  function.cpp2  functioncall.cpp  functioncall.cpp2  (+9 more)
(+9 files in other folders)
