cabal-version: >=1.10
name:          llvm-test
version:       0.1.0.0
license:       MIT
license-file:  LICENSE-MIT
copyright:     2012-2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
homepage:      https://github.com/sdiehl/kaleidoscope
bug-reports:   https://github.com/sdiehl/kaleidoscope/issues
synopsis:      Haskell port of LLVM Kaleidoscope tutorial
description:   Port of the Kaleidoscope tutorial for Haskell and LLVM
category:      Compilers
build-type:    Simple

executable toy
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  build-depends:
      base          >=4.7     && <5
    , containers    >=0.4     && <0.7
    , haskeline     >=0.7.1.2 && <0.8
    , llvm-hs       >=9.0.0   && <10.0.0
    , llvm-hs-pure  >=9.0.0   && <10.0.0
    , mtl           >=2.1.3   && <2.3
    , parsec        >=3.1     && <3.2
    , transformers  >=0.3.0.0 && <0.6
    , bytestring    >=0.10.8.2
  hs-source-dirs:      .
